--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.6.1",
     "react-reconciler": "^0.29.0",
     "react-tilt": "^1.0.2",
     "tailwindcss": "3.3.2",
-    "three": "^0.157.0"
+    "tailwindcss-ui": "^0.2.0",
+    "three": "^0.157.0",
+    "tw-elements": "^1.0.0"
   }
 }
