--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "denzel-udemba",
+  "version": "1.4.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
