--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-fast-marquee": "^1.6.1",
     "react-reconciler": "^0.29.0",
     "react-tsparticles": "^2.12.2",
+    "sharp": "^0.33.1",
     "tailwindcss": "3.3.2",
     "tsparticles": "^2.12.0",
     "tsparticles-slim": "^2.12.0"
